<resources>
    <string name="app_name">Tip Top</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Asosiy oyna</string>
    <string name="add_document">Kitob qo\'shish</string>
    <string name="users">Foydalanuvchilar</string>
    <string name="settings">Sozlamalar</string>
    <string name="exit">Chiqish</string>
    <string name="downloading">Yuklanmoqda...</string>
    <string name="title_file_download">APK yuklanmoqda</string>
    <string name="how_to_underline"><u>Qanday qo\'shiladi</u></string>
</resources>