<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/screenHome"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/screenAddEditDocuments"
            android:icon="@drawable/ic_file"
            android:title="@string/add_document" />
        <item
            android:id="@+id/screenUsers"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />
        <item
            android:id="@+id/screenSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_out"
            android:title="@string/exit" />

    </group>
</menu>